[package]
name = "blsm-server"
version = "0.1.0"
authors = ["SeaLoong <984391132@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
log = "0.4"
log4rs = "0.13"
chrono = "0.4"
config = "0.10"
clap = "2"
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
fixedbitset = "0.3"
dashmap = "3.11"
governor = "0.3"
nonzero_ext = "0.2"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'

[features]
