[package]
name = "blsm-server"
version = "0.1.0"
authors = ["SeaLoong <984391132@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
log = "0.4"
log4rs = "0.13"
chrono = "0.4"
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
dashmap = "3.11"
governor = "0.3"
nonzero_ext = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
redis = { version = "*", features = ["tokio-comp"] }

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'

[features]
